# Analytical-Satsky

./: .gitignore  README.md  analytical_model.py  pyproject.toml  setup.py
.github/workflows/: tests.yml
analytical_satsky/: __init__.py  _legacy.py  analytical_model.py  large_fov_model.py  loaders.py  model.py  plot_utils.py  shell_obs.py  shells.py
analytical_satsky/shells/: guowang.csv  leo.csv  oneweb.csv  qianfan.csv  starlink_filing1.csv  starlink_filing2.csv  starlink_march25.csv  starlink_scaled40000.csv
docs/: api.md  constellations.md  index.md  model.md
notebooks/: compute_RFI_exposure.ipynb  compute_satellite_occupancy.ipynb  satellite_density_maps.ipynb  walkthrough.ipynb
tests/: test_imports.py  test_internal.py  test_minimal_code.py
